--- a/1/百度一下，你就知道.htm
+++ b/1/百度一下，你就知道.htm
@@ -125,7 +125,7 @@ href="https://www.baidu.com/"><IMG title="到百度首页" alt="到百度首页"
 <FORM name="f" class="fm" id="form" onsubmit="javascript:F.call('ps/sug','pssubmit');" 
 action="/s"><SPAN class="bg s_ipt_wr" id="s_kw_wrap"><INPUT name="wd" class="s_ipt" id="kw" type="text" maxlength="100" autocomplete="off"></SPAN><INPUT name="rsv_spt" type="hidden" value="1"><INPUT name="rsv_iqid" type="hidden" value="0xd66a386f000da130"><INPUT name="issp" type="hidden" value="1"><INPUT name="f" type="hidden" value="8"><INPUT name="rsv_bp" type="hidden" value="0"><INPUT name="rsv_idx" type="hidden" value="2"><INPUT name="ie" type="hidden" value="utf-8"><INPUT name="tn" type="hidden" value="baiduhome_pg"><SPAN 
 class="btn_wr s_btn_wr bg" 
-id="s_btn_wr"><INPUT class="btn self-btn bg s_btn" id="su" type="submit" value="百度一下"></SPAN><SPAN 
+id="s_btn_wr"><INPUT class="btn self-btn bg s_btn" id="su" type="submit" value="刘雅度一下你就知道"></SPAN><SPAN 
 class="tools"><SPAN id="mHolder">
 <DIV id="mCon"><SPAN>输入法</SPAN></DIV>
 <UL id="mMenu">
