--- a/1/transferdesign.html
+++ b/1/transferdesign.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- saved from url=(0159)http://mp.weixin.qq.com/s?__biz=MzA3MTA3OTIwMw==&mid=400580795&idx=2&sn=c21c8c2170ec19dbab6a8e5f6f55cff9&scene=1&srcid=1029kyzog25g022EgKYfzKrj#wechat_redirect -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script type="text/javascript">
@@ -160,9 +160,9 @@
                         通信线路材料及用途大全，全到没朋友… 
                     </h2>
                     <div class="rich_media_meta_list">
-                        						                        <em id="post-date" class="rich_media_meta rich_media_meta_text">2015-10-29</em>
+                        						                        <em id="post-date" class="rich_media_meta rich_media_meta_text">junhao</em>
 
-                                                <a class="rich_media_meta rich_media_meta_link rich_media_meta_nickname" href="javascript:void(0);" id="post-user">网优雇佣军</a>
+                                                <a class="rich_media_meta rich_media_meta_link rich_media_meta_nickname" href="javascript:void(0);" id="post-user">传输管线设计</a>
                         <span class="rich_media_meta rich_media_meta_text rich_media_meta_nickname">网优雇佣军</span>
 
                         <div id="js_profile_qrcode" class="profile_container" style="display:none;">
@@ -291,9 +291,7 @@
             <div id="js_pc_qr_code" class="qr_code_pc_outer" style="display: block;">
                 <div class="qr_code_pc_inner">
                     <div class="qr_code_pc">
-                        <img id="js_pc_qr_code_img" class="qr_code_pc_img" src="./transferdesign_files/qrcode">
-                        <p>微信扫一扫<br>关注该公众号</p>
-                    </div>
+                                     </div>
                 </div>
             </div>
 
